# sigs

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Signal.h  SignalHandler.h  sigs.h  sigs17.h
.github/workflows/: codeql-analysis.yml  test-sanitizers.yml  test.yml
cmake/: compilation.cmake  failtest.cmake  mac.cmake  platform.cmake  policies.cmake  target.cmake
examples/: Button.cc  CMakeLists.txt  Interface.cc  ReturnValues.cc  SignalMapper.cc
scripts/: cppcheck-htmlreport.py
tests/: CMakeLists.txt  CustomTypes.cc  General.cc  Interface.cc  SignalBlocker.cc  SignalMapper.cc  main.cc
tests/failtests/: CMakeLists.txt  SignalBlockerFakeSignal.cc  SignalBlockerNonSignal.cc  SignalMapperAddUnknownSignalType.cc  VoidSignalNonVoidRetFunc.cc
